--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
