--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vite build & firebase deploy"
+    "deploy": "firebase deploy"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
